@@ -76,6 +76,9 @@ public class ChartConfig
    private boolean translucent = true;
    
    @Element(required = false)
+   private boolean area = false;
+   
+   @Element(required = false)
    private int lineWidth = 2;
    
    @Element(required = false)
@@ -731,6 +734,22 @@ public class ChartConfig
    public void setAutoScale(boolean autoScale)
    {
       this.autoScale = autoScale;
+   }
+
+   /**
+    * @return the area
+    */
+   public boolean isArea()
+   {
+      return area;
+   }
+
+   /**
+    * @param area the area to set
+    */
+   public void setArea(boolean area)
+   {
+      this.area = area;
    }
 
    /**
