@@ -16,9 +16,10 @@
 	- DCI filter in DCI selection dialog
 	- Configurable line width on ad-hoc line charts
 	- Object tooltips in rack view
+	- Line/area switch for all DCIs on chart level
 - Android console
 	- Reorganized alarm notification section (issue #1194)
-- Fixed issues: #405, #775, #859, #984, #1086, #1186, #1194, #1195, #1196, #1197, #1200, #1209, #1210, #1214, #1223, #1227, #1231
+- Fixed issues: #405, #775, #859, #984, #1086, #1112, #1186, #1194, #1195, #1196, #1197, #1200, #1209, #1210, #1214, #1223, #1227, #1231
 
 
 *
